tests/rosetta/out/Smalltalk/almost-prime.out
/workspace/mochi/tests/rosetta/out/Smalltalk/almost-prime.st:12: invalid assignment to argument n
/workspace/mochi/tests/rosetta/out/Smalltalk/almost-prime.st:29: parse error, expected '|' or identifier
