tests/rosetta/out/Smalltalk/almost-prime.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| kPrime nf i gen r n main k |
kPrime := [:n :k | nf := 0.
i := 2.
[(i <= n)] whileTrue: [.
[(((n % i)) = 0)] whileTrue: [.
((nf = k)) ifTrue: [
false.
] .
nf := (nf + 1).
n := (n / i).
].
.
i := (i + 1).
].
.
(nf = k). ].
gen := [:k :count | r := {}.
n := 2.
[(0 < count)] whileTrue: [.
(kPrime value: n value: k) ifTrue: [
r := r copyWith: n.
] .
n := (n + 1).
].
.
r. ].
main := [ k := 1.
[(k <= 5)] whileTrue: [.
Transcript show: ((((((k asString)) + (' '))) + ((gen value: k value: 10 asString)))) printString; cr.
k := (k + 1).
].
. ].
main value.
